[package]
name = "pdl-dissector"
version = "0.1.0"
edition = "2021"
authors = ["Maurice Lam <mauriceprograms@gmail.com>"]
description = "Generate Wireshark dissectors from Packet Descriptions written in PDL"
documentation = "https://docs.rs/pdl-dissector"
readme = "README.md"
repository = "https://github.com/mauricelam/pdl-dissector/"
license = "MIT"
keywords = ["pdl", "wireshark", "dissector"]
categories = ["parsing", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.0", features = ["derive"] }
codespan-reporting = "0.11.1"
env_logger = "0.11.2"
hex-literal = "0.4.1"
indent_write = "2.2.0"
indoc = "2.0.4"
log = "0.4.20"
pdl-compiler = "0.2.3"
pretty_assertions = "1.4.0"
quick-xml = { version = "0.31.0", features = ["serde", "serialize", "overlapped-lists"] }
serde = { version = "1.0.197", features = ["derive"] }

[dev-dependencies]
mlua = { version = "0.9.5", features = ["lua54", "vendored", "macros"] }
tempfile = "3.10.1"
